--- a/Quick Ship Router/Quick Ship Router.csproj
+++ b/Quick Ship Router/Quick Ship Router.csproj
@@ -77,7 +77,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Bill.cs" />
+    <Compile Include="BlacklistItem.cs" />
     <Compile Include="Chair.cs" />
+    <Compile Include="ChairManager.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
