Apex Stand Desk back travelers

--- a/Quick Ship Router/Quick Ship Router.csproj
+++ b/Quick Ship Router/Quick Ship Router.csproj
@@ -63,6 +63,10 @@
     <SignManifests>true</SignManifests>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Spire.Pdf, Version=3.2.52.56040, Culture=neutral, PublicKeyToken=663f351905198cb3, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\FreeSpire.PDF.3.2\lib\net40\Spire.Pdf.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -95,6 +99,8 @@
     <Compile Include="Table.cs" />
     <Compile Include="TableManager.cs" />
     <Compile Include="Traveler.cs" />
+    <Compile Include="TravelerUnraveler.cs" />
+    <Compile Include="tuTraveler.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
